# game-of-life

./: .gitignore  CMakeLists.txt  README.md  spec.md
include/core/: Grid.h
include/rendering/: Camera.h  Renderer.h  Shader.h  Window.h
include/simulation/: Simulator.h
patterns/: Patterns.h
src/: main.cpp
src/core/: Grid.cpp
src/rendering/: Camera.cpp  Renderer.cpp  Shader.cpp  Window.cpp
src/simulation/: Simulator.cpp
